[tool.poetry]
name = "Helipad"
version = "0.1.0"
description = ""
authors = ["acbchiella <acb.chiella@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.8.0.76"
numpy = "^1.25.2"
gdown = "^4.7.1"
matplotlib = "^3.7.2"
tk = "^0.1.0"
easyocr = "^1.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
